profile edition: width issue fix on firefox

--- a/src/views/profile-settings/ProfileSettings.scss
+++ b/src/views/profile-settings/ProfileSettings.scss
@@ -1,6 +1,6 @@
 .profile-settings {
   display: flex;
-  min-height: 607px;
+  min-height: 625px;
 
   &__back-btn {
     flex: 1;
